# smeargle

./: .gitignore  README.md  Taskfile.yml  dune-project  smeargle.opam  test.lisp
.github/workflows/: lint-and-test-workflow.yml
examples/: example.sexp  template-a4.typ  template-us-letter.typ
lib/: ast.ml  ast.mli  award.ml  award.mli  codegen.ml  codegen.mli  config.ml  config.mli  dune  entry_point.ml  entry_point.mli  eval.ml  eval.mli  flags.ml  flags.mli  formatter.ml  formatter.mli  io.ml  io.mli  job.ml  job.mli  literal.ml  literal.mli  output.ml  output.mli  project.ml  project.mli  school.ml  school.mli  store.ml  store.mli  util.ml  util.mli  variable.ml  variable.mli
test/expect_tests/: dune  example_test.ml
